<resources>
    <string name="app_name">DASS</string>
    <string name="select_language">Select Language / भाषा चुने</string>
    <string name="hindi">हिन्दी</string>
    <string name="english">English</string>
    <string name="Continue">Continue</string>
    <string name="login">Login</string>
    <string name="dass">DASS</string>
    <string name="phone_number_or_username">Phone number or username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="todo">TODO</string>
    <string name="Forgot_password">Forgot Password?</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="create_password">Create Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">CREATE ACCOUNT</string>
</resources>