<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/dass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/dass"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="150dp"
        tools:layout_editor_absoluteY="144dp" />

    <TextView
        android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="102dp"
        tools:layout_editor_absoluteY="199dp" />

    <EditText
        android:id="@+id/EmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:padding="20sp"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="normal"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="295dp" />

    <EditText
        android:id="@+id/phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:padding="20sp"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="normal"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="367dp" />

    <EditText
        android:id="@+id/create_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:hint="@string/create_password"
        android:inputType="textPassword"
        android:padding="20sp"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="normal"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="444dp" />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:padding="20sp"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="normal"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="521dp" />

    <Button
        android:id="@+id/create_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:padding="20sp"
        android:text="@string/create_account"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="604dp"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_view"
        tools:layout_editor_absoluteX="333dp"
        tools:layout_editor_absoluteY="452dp"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_view"
        tools:layout_editor_absoluteX="333dp"
        tools:layout_editor_absoluteY="528dp"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>